[project]
name = "crontui"
version = "0.1.0"
description = "TUI for managing cron jobs"
requires-python = ">=3.13"

dependencies = [
    "textual==8.1.1",
    "croniter==6.2.2",
]

[project.scripts]
crontui = "crontui:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/crontui"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
